--- a/Tasks/Task1/index.html
+++ b/Tasks/Task1/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji Stars Rating | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Emoji Stars Rating</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/all.min.css" />
+
 </head>
+
 <body>
   <div class="wrapper">
     <input type="radio" name="rate" id="star-1">
@@ -40,4 +43,5 @@
   </div>
 
 </body>
+
 </html>
