--- a/Tasks/Task2/index.html
+++ b/Tasks/Task2/index.html
@@ -75,6 +75,23 @@
 		</div>
 
 
+
+		<div class="column">
+			<div class="content">
+				<h1>6</h1>
+				<div class="box">
+					<h2>What is lorem ipsum</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.</p>
+				</div>
+			</div>
+			<div class="bg bg6"></div>
+		</div>
+	
+
+
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<script type="text/javascript">
